--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,9 @@
 {
-    "version": 2,
-    "name": "blockvault-server",
-    "builds": [{ "src": "app.js", "use": "@vercel/node" }],
-    "routes": [{ "src": "/(.*)", "dest": "/app.js" }]
+  "version": 2,
+  "name": "blockvault-server",
+  "builds": [{ "src": "app.js", "use": "@vercel/node" }],
+  "routes": [{ "src": "/(.*)", "dest": "/app.js" }],
+  "env": {
+    "NODE_ENV": "production"
+  }
 }
