--- a/.babelrc
+++ b/.babelrc
@@ -4,16 +4,14 @@
       "@babel/preset-env",
       {
         "targets": {
-          "node": "11"
-        }
+          "node": "current"
+        },
+        "modules": "auto"
       }
     ]
   ],
-  "plugins": [["@babel/plugin-proposal-decorators", { "legacy": true }]],
-  "env": {
-    "dev": {
-      "sourceMaps": "inline",
-      "retainLines": true
-    }
-  }
+  "plugins": [
+    ["@babel/plugin-proposal-decorators", { "legacy": true }],
+    ["@babel/plugin-proposal-class-properties", { "loose": true }]
+  ]
 }
