--- a/.eslintrc
+++ b/.eslintrc
@@ -1,10 +1,11 @@
 {
-    "extends": ["airbnb-base", "prettier"],
-    "parser": "babel-eslint",
-    "rules": {
-      "no-console": 0,
-      "no-underscore-dangle": 0,
-      "camelcase": 0,
-      "no-unused-vars": 0
-    }
+  "extends": ["airbnb-base", "prettier"],
+  "parser": "babel-eslint",
+  "rules": {
+    "no-console": 0,
+    "no-underscore-dangle": 0,
+    "camelcase": 0,
+    "no-unused-vars": 0,
+    "import/extensions": "off"
   }
+}
