--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "clean": "rimraf build/",
-    "build": "npm run clean && babel src --out-dir build/src --copy-files && cp app.js build/",
+    "build": "echo \"Vercel doesn't need a build script defined as it detects and builds automatically.\"",
     "start": "cross-env NODE_ENV=production node build/app.js",
     "dev": "cross-env NODE_ENV=development nodemon --exec babel-node app.js"
   },
