--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "start": "cross-env NODE_ENV=production node build/app.js",
     "dev": "cross-env NODE_ENV=development nodemon --exec babel-node app.js"
   },
-
   "author": "Paul Chibueze",
   "license": "ISC",
   "devDependencies": {
     "@babel/cli": "^7.24.7",
     "@babel/core": "^7.24.7",
     "@babel/node": "^7.24.7",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-proposal-decorators": "^7.24.7",
     "@babel/plugin-transform-runtime": "^7.13.10",
     "@babel/preset-env": "^7.24.7",
@@ -46,6 +46,7 @@
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.10.0",
     "randomatic": "^3.1.1",
-    "winston": "^3.3.3"
+    "winston": "^3.3.3",
+    "winston-mongodb": "^5.1.1"
   }
 }
